# tailwind-rs

./: .gitignore  .pre-commit-README.md  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  COMPREHENSIVE_REVIEW.md  Cargo.toml  Cargo.toml.backup  DEMO_README.md  LICENSE  POSTCSS_VALIDATION_FRAMEWORK.md  README.md  RELEASE_CHECKLIST_v0.12.0.md  RELEASE_NOTES_0.6.1.md  RELEASE_NOTES_v0.2.0.md  REMEDIATION_IMPLEMENTATION_PLAN.md  ROADMAP.md  TAILWIND_RS_COMPLEX_COMPONENT_ANALYSIS.md  TAILWIND_RS_V0_12_1_VALIDATION_REPORT.md  TAILWIND_V4_IMPLEMENTATION_PLAN.md  TAILWIND_V4_SUMMARY.md  TESTING_STRATEGY.md  advanced-features-test.css  advanced-header.css  comprehensive-demo.html  comprehensive-ssr.css  comprehensive-ssr.html  dark-mode-test.css  debug_bg.rs  debug_border_opacity.rs  debug_group_hover.rs  debug_parser_test.rs  debug_parsers.rs  demo.html  demo_css_generation.rs  demo_phase2_features.rs  header-coverage-test.css  hover-test.css  index.html  integration_test_parsing.rs  (+57 more)
crates/tailwind-rs-cli/: Cargo.toml
crates/tailwind-rs-cli/src/: build.rs  config.rs  main.rs  optimize.rs  stats.rs  utils.rs  watch.rs
crates/tailwind-rs-core/: Cargo.toml  comprehensive.css  styles.css
crates/tailwind-rs-core/benches/: css_generation_benchmark.rs  performance_benchmarks.rs
crates/tailwind-rs-core/examples/: additional_typography_utilities_test.rs  advanced_features_test.rs  advanced_header_demo.rs  advanced_spacing_sizing_test.rs  advanced_typography_utilities_test.rs  align_and_place_utilities_test.rs  aspect_ratio_columns_test.rs  backdrop_filter_utilities_test.rs  background_debug_test.rs  background_utilities_test.rs  border_debug_test.rs  border_utilities_test.rs  box_utilities_test.rs  break_control_test.rs  comprehensive_end_to_end_test.rs  comprehensive_ssr_demo.rs  comprehensive_tailwind_test.rs  comprehensive_typography_test.rs  comprehensive_utilities_example.rs  core_utilities_example.rs.disabled  coverage_analysis.rs  coverage_analysis_demo.rs  css_generation_showcase.rs  debug_custom_properties.rs  debug_custom_properties_detailed.rs  debug_remaining_classes.rs  debug_simple_positioning.rs  debug_sizing_parser.rs  effects_utilities_test.rs  filter_utilities_test.rs  final_typography_utilities_test.rs  final_utilities_test.rs  gap_and_justify_utilities_test.rs  header_coverage_test.rs  header_demo.rs  interactivity_debug_test.rs  layout_component_demo.rs  layout_utilities_test.rs  mask_utilities_complete_test.rs  mask_utilities_test.rs  (+20 more)
crates/tailwind-rs-core/proptest-regressions/: property_tests.txt
crates/tailwind-rs-core/src/: api_contracts.rs  api_stability.rs  arbitrary.rs  ast_parser.rs  boundary.rs  class_scanner.rs  classes.rs  classes_enhanced_tests.rs  color.rs  config.rs  css_generator.rs  css_generator.rs.backup  css_optimizer.rs  cursor.rs  custom_variant.rs  dark_mode.rs  debug_parsers.rs  enhanced_variants.rs  error.rs  gradients.rs  lib.rs  multi_language.rs  performance.rs  plugin_system.rs  postcss_integration.rs  postcss_integration_test.rs  property_tests.rs  responsive.rs  state_machine.rs  test_improvements.rs  theme.rs  theme_new.rs  tree_shaker.rs  utils.rs  validation.rs  week18_documentation_tests.rs  week19_testing_qa_tests.rs  week19_testing_qa_tests.rs.disabled  week20_release_prep_tests.rs
crates/tailwind-rs-core/tests/: advanced_performance_optimization_performance_tests.rs  advanced_performance_optimization_tests.rs  advanced_plugin_system_baseline_tests.rs  advanced_plugin_system_performance_tests.rs  advanced_plugin_system_tests.rs  all_83_parsers_test.rs  api_contract_tests.rs  arbitrary_values_tests.rs  cascade_layers_baseline_tests.rs  cascade_layers_performance_tests.rs  cascade_layers_tests.rs  category_parser_test.rs  complete_parser_test.rs  comprehensive_all_parsers_test.rs  comprehensive_parser_test.rs  comprehensive_test_suite.rs  container_queries_baseline_tests.rs  container_queries_performance_tests.rs  container_queries_tests.rs  css_grid_subgrid_baseline_tests.rs  css_grid_subgrid_performance_tests.rs  css_grid_subgrid_tests.rs  css_nesting_baseline_tests.rs  css_nesting_performance_tests.rs  css_nesting_tests.rs  debug_flex_parsers.rs  debug_stub_parsers.rs  emergency_parser_audit.rs  (+28 more)
crates/tailwind-rs-leptos/: Cargo.toml
crates/tailwind-rs-macros/: Cargo.toml
crates/tailwind-rs-postcss/: Cargo.toml
crates/tailwind-rs-scanner/: Cargo.toml
crates/tailwind-rs-testing/: Cargo.toml
crates/tailwind-rs-wasm/: .npmrc  Cargo.toml  comprehensive-demo.html  demo.html  enhanced-features-demo.html  index.html  package.json  playwright.config.js  pnpm-lock.yaml
crates/tailwind-rs-yew/: Cargo.toml
demos/leptos-demo/: CRITICAL_ISSUES_RESOLVED.md  Cargo-minimal.toml  Cargo-wasm-fixed.toml  Cargo-working.toml  Cargo.toml  README.md  WASM_BIGINT_MONITORING.md  WASM_DEMO_ISSUES_AND_SOLUTIONS.md  WASM_SOLUTION_COMPLETE.md  build-minimal.sh  build-v0.15.0.sh  build-wasm-fixed.sh  build-wasm.sh  build-working.sh  build.rs  default_14670679774281102897_0_163.profraw  default_14670679774281102897_0_1793.profraw  default_14670679774281102897_0_1919.profraw  default_14670679774281102897_0_2079.profraw  default_14670679774281102897_0_2252.profraw  default_14670679774281102897_0_2383.profraw  default_14670679774281102897_0_320.profraw  default_14670679774281102897_0_98084.profraw  default_14670679774281102897_0_98146.profraw  generate_css.rs  index.html  package-lock.json  package.json  playwright-test.js  playwright.config.ts  pnpm-lock.yaml  test-css-generation.sh  test-results.json  test-results.xml  validate-css-generation.sh  wasm-pack.toml
demos/ssr-demo/: Cargo-real-rust.toml  Cargo-real.toml  Cargo-simple-rust.toml  Cargo-simple-working.toml  Cargo-simple.toml  Cargo-working.toml  Cargo.toml  README.md  build.sh  leptos.toml  package-lock.json  package.json  playwright-test.spec.js  playwright.config.js  real_ssr_server.rs  simple_ssr.rs  simple_ssr_server.rs  simple_working_ssr.rs  working_ssr_server.rs
examples/leptos-ssr-demo/: Cargo.toml  README.md  leptos.toml  playwright-test.js  test_class.rs
(+1069 files in other folders)
