[package]
name = "tailwind-rs-core"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and utilities for tailwind-rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde", "js"] }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
regex = "1.10"
lru = "0.12"
parking_lot = "0.12"
syn = { version = "2.0", features = ["full", "visit"] }
# tailwind-rs-postcss = { version = "0.12.0", optional = true }  # Disabled for v0.12.0 release
tokio = { workspace = true, optional = true }

[features]
default = []
postcss = ["tokio"]  # postcss feature disabled for v0.12.0

[dev-dependencies]
# tailwind-rs-testing = "0.8.1"  # Will be added after publishing
wasm-bindgen-test = { workspace = true }
proptest = { workspace = true }
leptos = "0.8.9"

[lib]
name = "tailwind_rs_core"
path = "src/lib.rs"

[[example]]
name = "tailwind_v4_1_13_features"
path = "examples/tailwind_v4_1_13_features.rs"

