[package]
name = "tailwind-rs-scanner"
version.workspace = true
edition = "2021"
authors = ["Tailwind-RS Contributors"]
description = "Advanced content scanning for Tailwind-RS Core"
license = "MIT"
repository = "https://github.com/leptos-rs/tailwind-rs"
keywords = ["tailwind", "css", "scanner", "rust", "web"]
categories = ["web-programming", "development-tools"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# File system and glob
glob = "0.3"
walkdir = "2.3"
ignore = "0.4"

# Performance
parking_lot = "0.12"
dashmap = "5.5"
rayon = { version = "1.8", optional = true }

# Text processing
regex = "1.10"
tree-sitter = { version = "0.20", optional = true }

# Development dependencies
[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"

[features]
default = []
parallel = ["rayon"]
tree-sitter = ["dep:tree-sitter"]

[lib]
name = "tailwind_rs_scanner"
path = "src/lib.rs"
