[package]
name = "tailwind-rs-testing"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Testing utilities for tailwind-rs"

[dependencies]
tailwind-rs-core = { path = "../tailwind-rs-core" }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = "0.4"

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
proptest = { workspace = true }

[lib]
name = "tailwind_rs_testing"
path = "src/lib.rs"

