[package]
name = "tailwind-rs-leptos-demo"
version = "0.1.0"
edition = "2021"
authors = ["Tailwind-RS Team"]
license = "MIT"
repository = "https://github.com/your-org/tailwind-rs"
homepage = "https://github.com/your-org/tailwind-rs"
documentation = "https://docs.rs/tailwind-rs"
keywords = ["tailwind", "css", "rust", "leptos", "wasm", "web"]
categories = ["web-programming", "wasm"]
description = "Leptos WASM demo showcasing tailwind-rs capabilities"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos dependencies
leptos = { version = "0.8.8", features = ["csr"] }
leptos_meta = "0.8.5"
leptos-shadcn-signal-management = "0.1.0"
leptos-use = "0.16.2"

# Web dependencies (only for WASM builds)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.20"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Profiles are defined at workspace level
