[package]
name = "tailwind-rs-leptos-demo-working"
version = "0.15.0"
edition = "2021"
authors = ["Tailwind-RS Team"]
license = "MIT"
description = "Tailwind-RS v0.15.0 Leptos demo with comprehensive CSS generation"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Leptos dependencies
leptos = { version = "0.8.8", features = ["csr"] }

# Tailwind-RS v0.15.0 packages
tailwind-rs-core = "0.15.0"
tailwind-rs-postcss = "0.15.0"
tailwind-rs-scanner = "0.15.0"

# Web dependencies (only for WASM builds)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.99"
web-sys = "0.3.77"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
